--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 markdown: kramdown
 
 # URL of the Site
-url: ''
+url: 'https://Enyu2023.github.io'
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: 
+baseurl: https://github.com/Enyu2023/Enyu2023.github.io
 
 # Title of the Site
 title: What A Theme
