--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ disqus-shortname: thedevslot
 # Name of the Author
 author-name: Enyu
 # URL for the Image of the Author
-author-image: https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
+author-image: /Euler.jpg
 # 60 Words About the Author
 author-about: I'm an undergraduate at Beijing Normal University.
 author-url: https://enyu2023.github.com
