--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ facebook_username: /
 twitter_username: /
 instagram_username: /
 linkedin_username: /
-github_username:  tEnyu2023
+github_username:  Enyu2023
 youtube_channel_id: 
 reddit_username: /
 behance_username: /
@@ -42,7 +42,7 @@ disqus-shortname: thedevslot
 # Name of the Author
 author-name: Enyu
 # URL for the Image of the Author
-author-image: /Euler.jpg
+author-image: /assets/images/my.jpg
 # 60 Words About the Author
 author-about: I'm an undergraduate at Beijing Normal University.
 author-url: https://enyu2023.github.com
