--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
 email: lienyu2001@outlook.com
-facebook_username: /
-twitter_username: /
+facebook_username: 
+
 instagram_username: /
 linkedin_username: /
 github_username:  Enyu2023
