--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,11 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
 email: lienyu2001@outlook.com
-facebook_username: 
-twitter_username:
-instagram_username: 
-linkedin_username: 
+
+zhihu_username: ley-91-63
+
 github_username:  Enyu2023
-youtube_channel_id: 
-reddit_username: 
-behance_username: 
-dribbble_username: 
-spotify_username: 
+
 
 
 
