--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,11 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 # If you don't want to use any icon, you can leave them blank.
 email: lienyu2001@outlook.com
 
+facebook_username: 
+twitter_username:
+instagram_username: 
+linkedin_username: 
+
 zhihu_username: ley-91-63
 
 github_username:  Enyu2023
