--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username:
 instagram_username: 
 linkedin_username: 
 
-zhihu_username: ley-91-63
+zhihu_username: ley
 
 github_username:  Enyu2023
 
