--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,11 @@ twitter_username: \
 instagram_username: \ 
 linkedin_username: \
 github_username:  Enyu2023
-
+youtube_channel_id: \
+reddit_username:
+behance_username:
+dribbble_username:
+spotify_username:
 
 
 
