--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: 'https://Enyu2023.github.io'
 baseurl: 
 
 # Title of the Site
-title: SHOOTING FOR STARS
+title: SHOOTING FOR STARS ???
 # Description of the Site
 description: Welcom To My Homepage!
 # URL of Image of the Site
