--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
-t# WhatATheme
+# WhatATheme
 markdown: kramdown
 
 # URL of the Site
-url: 'https://Enyu2023.github.io'
+url: ''
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
 baseurl: 
 
 # Title of the Site
-title: SHOOTING FOR STARS ???
+title: What A Theme
 # Description of the Site
-description: Welcom To My Homepage!
+description: A customizable Jekyll portfolio theme
 # URL of Image of the Site
 site-image: /WhatATheme/assets/images/meta.jpg
 # Keywords of the Site
-site-keywords: Enyu, Enyu Li, Math
+site-keywords: Site, Template, Theme
 # URL for the Image of custom Favicon
-favicon-url: /Euler.jpg
+favicon-url: 
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
 heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
-email: lienyu2001@outlook.com
+email: thedevslot@gmail.com
 facebook_username: thedevslot
 twitter_username: thedevslot
 instagram_username: thedevslot
@@ -41,12 +41,13 @@ google-analytics: UA-163806439-1
 disqus-shortname: thedevslot
 
 # Name of the Author
-author-name: Enyu
+author-name: TheDevsLot
 # URL for the Image of the Author
-author-image: /assets/images/my.jpg
+author-image: https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
 # 60 Words About the Author
-author-about: I'm an undergraduate at Beijing Normal University.
-author-url: https://enyu2023.github.com
+author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
+# URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
+author-url: https://github.com/thedevslot
 
 # SASS
 sass:
