--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ reddit_username: /
 behance_username: /
 dribbble_username: /
 spotify_username: /
+zhihu_username: /
 
 # Google Analytics
 google-analytics: UA-163806439-1
