--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ facebook_username:
 twitter_username: 
 instagram_username: 
 linkedin_username: 
-github_username:  
-youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
+github_username:  enyu2023
+youtube_channel_id: 
 reddit_username: 
 behance_username: 
 dribbble_username: 
