--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,18 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: Ley Space
+title: Ley Space 
 # Description of the Site
 description: Welcome To My Homepage!
 # URL of Image of the Site
-site-image: /WhatATheme/assets/images/meta.jpg
+site-image: /assets/images/me.jpg
 # Keywords of the Site
 site-keywords: enyu, enyu li, math
 # URL for the Image of custom Favicon
 favicon-url: 
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+heroimage: /assets/images/math.jpg
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
@@ -35,17 +35,17 @@ spotify_username:
 zhihu_username: ley-91-63
 
 # Google Analytics
-google-analytics: UA-163806439-1
+google-analytics: 
 
 # Disqus
-disqus-shortname: thedevslot
+disqus-shortname: Ley
 
 # Name of the Author
 author-name: Enyu
 # URL for the Image of the Author
-author-image: /assets/images/my.jpg
+author-image: /assets/images/me.jpg
 # 60 Words About the Author
-author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
+author-about: I'm an undergraduate at Beijing Normal.
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://github.com/enyu2023
 
@@ -60,11 +60,12 @@ plugins:
   - jekyll-feed
 
 # Permalink
-permalink: "blog/:title"
+permalink: "blog/:categories/:title"
 
 # Compress
 compress_html:
   clippings: all
+
 
 # Defaults
 defaults:
