--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # WhatATheme
 
 # URL of the Site
-url: ''
+url: 'Enyu2023/Enyu2023.github.io'
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
 baseurl: 
 
