--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ site-image: /assets/images/me.jpg
 # Keywords of the Site
 site-keywords: enyu, enyu li, math
 # URL for the Image of custom Favicon
-favicon-url: 
+favicon-url: /assets/images/mobius.jpg
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
 heroimage: /assets/images/math.jpg
